syntax = "proto3";

option go_package = "api/pb/auth";

service Authenticate{
    rpc GenerateJWT (GenerateJWTReq) returns (GenerateJWTResp) {}
    rpc ValidateJWT (ValidateJWTReq) returns (ValidateJWTResp) {}
}

message GenerateJWTReq{
    int64 id = 1;
    string login = 2;
}

message GenerateJWTResp{
    string token = 1;
}

message ValidateJWTReq{
    string token = 1;
}

message ValidateJWTResp{
    int64 id = 1;
    string login = 2;
}